force-app/main/default/objects/hed__Education_History__c/fields/hed__Class_Rank_Scale__c.field-meta.xml
<CustomField>
    <fullName>hed__Class_Rank_Scale__c</fullName>
    <description
  >Tracks how the Class Percentile was determined. For example, using exact decile, quintile, or quartile.</description>
    <inlineHelpText
  >Tracks how the Class Percentile was determined. For example, using exact decile, quintile, or quartile.</inlineHelpText>
    <label>Class Rank Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exact</fullName>
            </value>
            <value>
                <fullName>Decile</fullName>
            </value>
            <value>
                <fullName>Quintile</fullName>
            </value>
            <value>
                <fullName>Quartile</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>