force-app/main/default/objects/hed__Education_History__c/fields/hed__Contact__c.field-meta.xml
<CustomField>
    <fullName>hed__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact related to this historical data.</description>
    <inlineHelpText
  >The Contact related to this historical data.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Education History</relationshipLabel>
    <relationshipName>Education_History</relationshipName>
    <type>Lookup</type>
</CustomField>