force-app/main/default/objects/hed__Education_History__c/fields/hed__Education_History_JSON__c.field-meta.xml
<CustomField>
    <fullName>hed__Education_History_JSON__c</fullName>
    <description
  >A system field that stores a large JSON structure used for integrations. Do not modify this field.</description>
    <label>Education History JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>