force-app/main/default/objects/hed__Education_History__c/fields/hed__Educational_Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>hed__Educational_Institution_Name__c</fullName>
    <description
  >The name of the Educational Institution related to this data.</description>
    <label>Educational Institution Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>