force-app/main/default/objects/hed__Education_History__c/fields/hed__End_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__End_Date__c</fullName>
    <description
  >The date the Contact left this Educational Institution.</description>
    <inlineHelpText
  >The date the Contact left this Educational Institution.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>