force-app/main/default/objects/hed__Education_History__c/fields/hed__GPA_Scale_Reporting__c.field-meta.xml
<CustomField>
    <fullName>hed__GPA_Scale_Reporting__c</fullName>
    <description
  >The highest possible grade point average at this Educational Institution.</description>
    <inlineHelpText
  >The highest possible grade point average at this Educational Institution.</inlineHelpText>
    <label>GPA Scale Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>19</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>