force-app/main/default/objects/hed__Education_History__c/fields/hed__Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Graduation_Date__c</fullName>
    <description
  >If applicable, the date the Contact graduated from this Educational Institution.</description>
    <inlineHelpText
  >If applicable, the date the Contact graduated from this Educational Institution.</inlineHelpText>
    <label>Graduation Date</label>
    <type>Date</type>
</CustomField>