force-app/main/default/objects/hed__Education_History__c/fields/hed__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Start_Date__c</fullName>
    <description
  >The date the Contact started at this Educational Institution.</description>
    <inlineHelpText
  >The date the Contact started at this Educational Institution.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>