force-app/main/default/objects/hed__Education_History__c/fields/hed__Status__c.field-meta.xml
<CustomField>
    <fullName>hed__Status__c</fullName>
    <description
  >The status of the Education History. For example, Enrolled or Completed.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Leave of Absence</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Withdrew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>