force-app/main/default/objects/hed__Education_History__c/fields/hed__Verification_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Verification_Status_Date__c</fullName>
    <description>The most recent date Verification Status changed.</description>
    <inlineHelpText
  >The most recent date Verification Status changed.</inlineHelpText>
    <label>Verification Status Date</label>
    <type>Date</type>
</CustomField>